# galactica-network

./: Pipfile  README.md  main.py  pyproject.toml
galactica-network/: blockchain.py  main.py  wallet.py
src/: blockchain.py  main.py  wallet.py
